2002-02-21  Morten Welinder  <terra@diku.dk>

	* src/numbers.h: Define prototypes for strtognum, modfgnum, and
	gnumabs here when needed.

	* src/workbook-control-gui.c (wbcg_validation_msg): Constify.

	* src/cell.c (cell_is_zero): Use gnum_float.

	* src/regression.c (LUPDecomp): Use gnumabs.
	* src/solver-lp.c (solver_answer_report): Ditto.
	* src/value.c (value_diff): Ditto.
	* src/goal-seek.c: Ditto.
	* src/rangefunc.c (range_avedev): Ditto.

	* src/validation.c (validation_eval): Use gnum_float, modfgnum,
	and gnumabs.

	* src/numbers.h (GNUM_MANT_DIG, GNUM_MAX_EXP, gnumabs): New stuff.

2002-02-21  Morten Welinder <terra@diku.dk>

	* src/solver-lp.c (callback): Fix formats.

	* src/plugin-loader-module.h (ModulePluginFunctionInfo): Constify.
	* src/plugin-loader-module.c (gnumeric_plugin_loader_module_func_get_full_function_info): Constify.
	* src/func.c (function_def_get_full_info_if_needed): Constify.

2002-02-20  Jody Goldberg <jody@gnome.org>

	* src/workbook.h : some house cleaning.

	* src/workbook.c (workbook_is_pristine) : remove stuf for
	  external_dependents.  No use having fogotten stubs hanging around.

	* src/workbook-control-gui.c (cb_insert_component) : look for
	  ControlFactories.
	(cb_insert_shaped_component) : look for CanvasComponentFactories.

	* src/commands.h : remove include for gtkobject.

	* idl/GNOME_Gnumeric_Graph.idl : We a ControlFactory now, not an
	  Embeddable.

2002-02-20  Morten Welinder  <terra@diku.dk>

	* src/mathfunc.c (display): Fix format.
	* src/analysis-tools.c (confidence_level): Ditto.
	(regression_tool): Ditto.
	* src/format.c (fmt_general_int): Ditto.

	* configure.in (set_mode_warnings): Add -Wformat also.

2002-02-20  Morten Welinder  <terra@diku.dk>

	* src/func.c (fn_def_new, function_add_args, function_add_nodes):
 	Constify.

2002-02-20  Morten Welinder  <terra@diku.dk>

	* src/parser.y (yyerror): Constify.

	* src/xml-io.c (xml_node_set_print_unit): Constify.
	(xml_read_print_repeat_range): Constify.
